@@ -1,5 +1,5 @@
 /*
- * # Copyright 2024-2025 NetCracker Technology Corporation
+ * # Copyright 2024-2026 NetCracker Technology Corporation
  * #
  * # Licensed under the Apache License, Version 2.0 (the "License");
  * # you may not use this file except in compliance with the License.
@@ -16,6 +16,7 @@
 
 package org.qubership.atp.tdm.service.impl;
 
+import java.lang.reflect.InvocationTargetException;
 import java.sql.Connection;
 import java.text.ParseException;
 import java.time.LocalDate;
@@ -30,8 +31,6 @@ import java.util.Optional;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
-import javax.annotation.Nonnull;
-import javax.annotation.Nullable;
 import javax.sql.DataSource;
 
 import org.apache.commons.lang3.ObjectUtils;
@@ -67,13 +66,16 @@ import org.qubership.atp.tdm.service.CleanupService;
 import org.qubership.atp.tdm.service.SchedulerService;
 import org.qubership.atp.tdm.utils.DataUtils;
 import org.qubership.atp.tdm.utils.ValidateCronExpression;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.boot.sql.init.dependency.DependsOnDatabaseInitialization;
 import org.springframework.stereotype.Service;
 
 import com.google.common.base.Preconditions;
+import jakarta.annotation.Nonnull;
+import jakarta.annotation.Nullable;
 import lombok.extern.slf4j.Slf4j;
 
+@DependsOnDatabaseInitialization
 @Slf4j
 @Service
 public class CleanupServiceImpl implements CleanupService {
@@ -99,7 +101,6 @@ public class CleanupServiceImpl implements CleanupService {
     /**
      * Default constructor.
      */
-    @Autowired
     public CleanupServiceImpl(@Nonnull EnvironmentsService environmentsService,
                               @Nonnull SchedulerService schedulerService,
                               @Nonnull CleanupConfigRepository repository,
@@ -326,7 +327,7 @@ public class CleanupServiceImpl implements CleanupService {
             LocalDate cleanupDate = DataUtils.calculateExpiredData(config.getSearchDate());
             return runCleanupByDate(tableName, cleanupDate);
         } else {
-            log.error(String.format(TdmUndefinedCleanupCriteriaException.DEFAULT_MESSAGE, tableName));
+            log.error(TdmUndefinedCleanupCriteriaException.DEFAULT_MESSAGE.formatted(tableName));
             throw new TdmUndefinedCleanupCriteriaException(tableName);
         }
     }
@@ -442,14 +443,14 @@ public class CleanupServiceImpl implements CleanupService {
 
     @Nonnull
     private TestDataCleaner initCleaner(@Nullable String className)
-            throws IllegalAccessException, InstantiationException {
+            throws IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
         Preconditions.checkArgument(StringUtils.isNotEmpty(className), "Class name is null or empty");
         Class<?> clazz = CLASS_METHOD_WHITE_LIST.get(className);
         if (!TestDataCleaner.class.isAssignableFrom(clazz)) {
             throw new IllegalArgumentException(
                     "Class '" + className + "' doesn't implement TestDataCleaner interface");
         }
-        return (TestDataCleaner) clazz.newInstance();
+        return (TestDataCleaner) clazz.getDeclaredConstructor().newInstance();
     }
 
     /**
