@@ -1,5 +1,5 @@
 /*
- * # Copyright 2024-2025 NetCracker Technology Corporation
+ * # Copyright 2024-2026 NetCracker Technology Corporation
  * #
  * # Licensed under the Apache License, Version 2.0 (the "License");
  * # you may not use this file except in compliance with the License.
@@ -17,19 +17,16 @@
 package org.qubership.atp.tdm.service.impl;
 
 import java.util.List;
-import java.util.stream.Collectors;
-
-import javax.annotation.Nonnull;
 
 import org.qubership.atp.tdm.model.TestDataTableCatalog;
 import org.qubership.atp.tdm.model.table.TestDataFlagsTable;
 import org.qubership.atp.tdm.repo.CatalogRepository;
 import org.qubership.atp.tdm.repo.TestDataColumnFlagsRepository;
 import org.qubership.atp.tdm.service.TestDataFlagsService;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Lazy;
 import org.springframework.stereotype.Service;
 
+import jakarta.annotation.Nonnull;
 import lombok.extern.slf4j.Slf4j;
 
 @Slf4j
@@ -43,7 +40,6 @@ public class TestDataFlagsServiceImpl implements TestDataFlagsService {
      * Default constructor.
      */
     @Lazy
-    @Autowired
     public TestDataFlagsServiceImpl(@Nonnull TestDataColumnFlagsRepository testDataColumnFlagsRepository,
                                     @Nonnull CatalogRepository catalogRepository) {
         this.testDataColumnFlagsRepository = testDataColumnFlagsRepository;
@@ -76,7 +72,7 @@ public class TestDataFlagsServiceImpl implements TestDataFlagsService {
         List<TestDataFlagsTable> flagsTableList = catalogRepository.findAllByProjectIdAndTableTitle(
                 testDataCatalog.getProjectId(),
                 testDataCatalog.getTableTitle()).stream().map(catalog -> new TestDataFlagsTable(catalog.getTableName(),
-                validateUnoccupiedResources)).collect(Collectors.toList());
+                validateUnoccupiedResources)).toList();
         flagsTableList.forEach(testDataFlagsTable -> {
             testDataColumnFlagsRepository.save(testDataFlagsTable);
             log.info("Flag {} has been installed for table: {}",
