@@ -1,5 +1,5 @@
 /*
- * # Copyright 2024-2025 NetCracker Technology Corporation
+ * # Copyright 2024-2026 NetCracker Technology Corporation
  * #
  * # Licensed under the Apache License, Version 2.0 (the "License");
  * # you may not use this file except in compliance with the License.
@@ -25,8 +25,10 @@ import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Future;
 import java.util.stream.Collectors;
 
-import javax.annotation.Nonnull;
-
+import org.qubership.atp.common.lock.LockManager;
+import org.qubership.atp.integration.configuration.mdc.MdcUtils;
+import org.qubership.atp.tdm.env.configurator.model.LazyEnvironment;
+import org.qubership.atp.tdm.env.configurator.service.EnvironmentsService;
 import org.qubership.atp.tdm.exceptions.internal.TdmSearchCleanupConfigException;
 import org.qubership.atp.tdm.mdc.TdmMdcHelper;
 import org.qubership.atp.tdm.model.TestDataTableCatalog;
@@ -39,16 +41,12 @@ import org.qubership.atp.tdm.repo.CatalogRepository;
 import org.qubership.atp.tdm.repo.CleanupConfigRepository;
 import org.qubership.atp.tdm.service.CleanupService;
 import org.qubership.atp.tdm.utils.CurrentTime;
+import org.qubership.atp.tdm.websocket.bulkaction.BulkActionsHandler;
 import org.slf4j.MDC;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.web.socket.WebSocketSession;
 
-import org.qubership.atp.common.lock.LockManager;
-import org.qubership.atp.integration.configuration.mdc.MdcUtils;
-import org.qubership.atp.tdm.env.configurator.model.LazyEnvironment;
-import org.qubership.atp.tdm.env.configurator.service.EnvironmentsService;
-
-import org.qubership.atp.tdm.websocket.bulkaction.BulkActionsHandler;
+import jakarta.annotation.Nonnull;
 import lombok.extern.slf4j.Slf4j;
 
 @Slf4j
@@ -86,7 +84,7 @@ public class BulkDataCleanupHandler extends BulkActionsHandler {
                 .filter(c -> cleanupConfigRepository.findById(c.getCleanupConfigId())
                         .orElseThrow(() ->
                                 new TdmSearchCleanupConfigException(c.getCleanupConfigId().toString()))
-                        .isEnabled()).collect(Collectors.toList());
+                        .isEnabled()).toList();
         Map<UUID, Optional<TestDataCleanupConfig>> testDataCleanUpConfigs = catalogList.stream()
                 .collect(Collectors.toMap(TestDataTableCatalog::getCleanupConfigId,
                 c -> cleanupConfigRepository.findById(c.getCleanupConfigId()), (a, b) -> b));
@@ -104,7 +102,7 @@ public class BulkDataCleanupHandler extends BulkActionsHandler {
                             CleanupResults cleanupResults = cleanupService
                                     .runCleanup(tableCatalog.getTableName(),
                                             testDataCleanUpConfigs.get(tableCatalog.getCleanupConfigId())
-                                                    .orElseThrow(() -> new TdmSearchCleanupConfigException()));
+                                                    .orElseThrow(TdmSearchCleanupConfigException::new));
                             return new BulkActionResult(tableCatalog.getTableTitle(), tableCatalog.getTableName(),
                                     envName, cleanupResults);
                         } catch (Exception e) {
